--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>vishnu's site</title></head>
-
+<link rel='stylesheet' type='text/css' href='css/main.css'>
 <body>
   <nav>
   <ul>
