--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head><title>vishnu's site</title></head>
-<link rel='stylesheet' type='text/css' href='css/main.css'>
-<body>
-  <nav>
-  <ul>
-  <li> H0me </li>
-  <li> ab0ut </li>
-  <li> pr0jects </li>
-  <li> _c0nt@ct </li>
-  </ul>
-  </nav>
-  <div class="container">
-        <div class="blurb">
-        <h1> Python is awesome!</h1>
-        <p> Just some guy who fell in love with python  </p>
-      </div>
-     </div>
-     
-     <footer>
-     <ul>
-     <li>mailto : vpvishnus96@gmail.com</li>
-     <li>https://github.com/vishnu-priyan</li>
-     </ul>
-     </footer>
-    </body>
-    </html>
+	<head>
+		<title>in_l0ve_w1th_pyth0n</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv"></a>Projects</li>
+        		<li><a href="/blog">Philosophy</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm vishnu</h1>
+				<p>I'm best known as the python guy <em>(by people who know nothing about python)</em></p>       
+        <p> I wish to be known as THE python guy <em> (by people who pretty much developed python)</p>
+          <h7> Hey dreams can be big right? </h7>
+      </div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:vpvishnus@gmail.com">email</a></li>
+        		<li><a href="https://github.com/vishnu-priyan">github.com/vishnu-priyan</a></li>
+          <li><a href="https://stackoverflow.com/users/7863149/s-vishnu">Stackoverflow profile</a>
+			</ul>
+		</footer>
+	</body>
+</html>
